# Icetex_Simulator_web

./: .gitignore  Casos de Prueba.xlsx  Logic.py  README.md  SecretConfig-sample.py  Test.py  Tests.py  app.py  exceptions.py  main.py  requirements.txt  test_logic.py
.buildozer/: state.db
.buildozer/android/app/src/model/: logic.py
.buildozer/android/app/tests/: test_logic.py
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/IcetexSimulato/: build.gradle  build.xml  dist_info.json  local.properties
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/IcetexSimulato/src/main/assets/: private.tar
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/IcetexSimulato/src/main/res/values/: strings.xml
.gitignore/: pyproject.toml
sql/: create-credit.sql  delete-credit.sql
src/controller/: credits_controller.py
src/model/: Casos de Prueba.xlsx  credit.py  exception.py  logic.py
src/view/: main.py
src/view/console/: console_view.py  main.py
src/view/gui/: console_kivy.py
src/view/web/: app.py  routes.py
src/view/web/templates/: base.html  modificar.html
templates/: base.html  buscar.html  index.html  insertar.html
tests/: test_credit.py  test_logic.py
